
2007-06-15  Benno Schulenberg  <benno@vertaalt.nl>

	* lib/localweb.py: Use lighther colours, use blue for the fully
	untranslated packages, and colourize domain pages too.

	* lib/localweb.py: Simplify the writing of coloured table entries.

	* lib/localweb.py: Rename a variable.

	* registry/registry.sgml: Synced with Montréal.

	* lib/localweb.py: Textual tweaks.

	* bin/tp-robot: Remove support for very old PO files.

	* bin/tp-robot: The robot handles only emails, not PO files.
	Also stop translating messages for now, as something goes wrong
	there: it gets back an instance instead of a string.

	* bin/po-register: Only notify the maintainer if the submitted
	PO file is for the most recent POT file of the package.  Also
	use angled brackets to mark email addresses.

	* bin/po-register: Add the package version number to the mail sent
	to the maintainer, so she knows to which POT file the translators
	are reacting, in case someone else submitted the POT file.

2007-06-14  Benno Schulenberg  <benno@vertaalt.nl>

	* bin/tp-robot: Use angled brackets to quote email addresses.

2007-06-14  Benno Schulenberg  <benno@vertaalt.nl>

	* Makefile, bin/run-queue.sh, bin/postats-data:
	Rename "postats-data" to "calc-postats", and update the
	statistics immediately after handling any PO submissions.

	* web/Makefile: Make it a little easier to change.

2007-06-13  Benno Schulenberg  <benno@vertaalt.nl>

	* bin/postats-data: Remove duplication of deletion code,
	make updating independent of initialization option.

	* bin/postats-data: Adapt usage message, be more verbose.

	* bin/postats-data: Do not save after every change, and
	distinguish between an updated and a new PO file.

	* bin/postats-data: Add the ability to recalculate the stats
	for a single POT file; to be used by bin/fetch-pot.

	* bin/postats-data: Better function names, better eror messages.

	* bin/postats-data: Remove unused parameters.

	* bin/postats-data: Simplify variable names.
