@@ -1,7 +1,7 @@
 Next:
-* the robot should send reactions to submissions by a translator
-  _not to the sending address, _not to the address in the PO header,
-  but to the address officially registered in the sgml file.
+* remove unpacking of file; only standard input is possible
+* reject PO files for which translated strings are under 5%
+
 * have the robot check the subject line with the actual contents
   of the email, or at least rewrite the subject line with the
   correct filename and version
@@ -13,7 +13,7 @@ Just before going live:
 * run mirror_tp_data.py one last time, the drop it
 * change robot's directive in layout.html to "index,follow"
 * convert trans and teams/PO symlinks to PO-files links,
-  and remove the teams/ subdir
+  remove the teams/ subdir, and remove the workaround in po-expire
 
 Later:
 * run 'make check' and delete PO files with fatal errors,
@@ -31,9 +31,9 @@ Later:
 * sort AUTHORS by data
 * mail bug-tar about simpler fetch script
 * search and delete the PO files with mistaken encoding specifications
-* delete PO files for which translated strings is under 5%
-* remove unpacking of file; only standard input is possible
-
+* delete PO files for which translated strings are under 5%
+* check that 'Last-Translator' is the same as the _last_ line in the
+  preheader, not the third line of that preheader
 
 
 ==============================================
